setup: add WhiskyWine download/install diagnostics + copy workflow (Fixes #63) (#65)
* feat: add WhiskyWine setup diagnostics + copy workflow

* chore: satisfy swiftlint limits in setup diagnostics

* fix: build errors in setup diagnostics + PE access

* fix: reset setup diagnostics on download retry

* fix: verify WhiskyWine install success on retry

* fix: record install retry start + reuse validation

* perf: reuse ISO8601 timestamp formatting in setup diagnostics

* fix: address PR feedback in setup flow

* fix: keep PE nested types explicitly public

* fix: unify install flow + truncate diagnostics cleanly

* fix: refine setup diagnostics retry handling

* docs: add security comments for diagnostic URL fields

Address PR review comment about documenting security boundaries
for URLs in diagnostics report.

* fix: disable retry button during installation to prevent race conditions

* fix: preserve tarball for retry if installation validation fails

The installer was deleting the tarball immediately after extraction,
before verifying isWhiskyWineInstalled(). If extraction succeeded but
the version file was missing/corrupted, retry would fail silently
because the tarball was already deleted.

Fix: Move tarball deletion to after installation verification. Add
cleanupTarball(at:) method that is only called after confirming
isWhiskyWineInstalled() returns true.

* fix: address setup diagnostics review feedback

Improve reporting consistency, reduce ambiguity in logs, and add tests to prevent regressions.

* fix: preserve install attempt diagnostics

Track install attempts across retries, surface them in reports, and backfill missing locale entries.

* fix: harden setup diagnostics and install flow

Preserve install attempt context, avoid race/zero-speed edge cases, and expand
setup diagnostics coverage while keeping PE extensions public.

* Format ETA text in WhiskyWineDownloadView for better readability

* Fix Swift style: use comma instead of && in while condition



--- a/Whisky/Localizable.xcstrings
+++ b/Whisky/Localizable.xcstrings
@@ -17678,6 +17678,290 @@
         }
       }
     },
+    "setup.whiskywine.copyDiagnostics" : {
+      "localizations" : {
+        "ar" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "نسخ التشخيصات"
+          }
+        },
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Zkopírovat diagnostiku"
+          }
+        },
+        "da" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kopiér diagnostik"
+          }
+        },
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Diagnosedaten kopieren"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Copy Diagnostics"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Copiar diagnósticos"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kopioi diagnostiikka"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Copier les diagnostics"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Copia diagnosi"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "診断情報をコピー"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "진단 정보 복사"
+          }
+        },
+        "nl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Diagnose kopiëren"
+          }
+        },
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kopiuj diagnostykę"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Copiar diagnósticos"
+          }
+        },
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Copiar diagnósticos"
+          }
+        },
+        "ro" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Copy Diagnostics"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Копировать диагностику"
+          }
+        },
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kopiera diagnostik"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tanılamayı kopyala"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Скопіювати діагностику"
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sao chép chẩn đoán"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "复制诊断"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "複製診斷"
+          }
+        }
+      }
+    },
+    "setup.whiskywine.error.installFailed" : {
+      "localizations" : {
+        "ar" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "فشل تثبيت WhiskyWine. يُرجى نسخ التشخيصات وإرفاق السجلات."
+          }
+        },
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Instalace WhiskyWine se nezdařila. Zkopírujte diagnostiku a přiložte protokoly."
+          }
+        },
+        "da" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Installationen af WhiskyWine mislykkedes. Kopiér diagnostik og vedhæft logfiler."
+          }
+        },
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Die Installation von WhiskyWine ist fehlgeschlagen. Bitte Diagnosedaten kopieren und Protokolle anhängen."
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WhiskyWine installation failed. Please copy diagnostics and attach logs."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "La instalación de WhiskyWine falló. Copie los diagnósticos y adjunte los registros."
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WhiskyWine-asennus epäonnistui. Kopioi diagnostiikka ja liitä lokit."
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "L'installation de WhiskyWine a échoué. Veuillez copier les diagnostics et joindre les journaux."
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Installazione di WhiskyWine non riuscita. Copia la diagnostica e allega i log."
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WhiskyWine のインストールに失敗しました。診断情報をコピーしてログを添付してください。"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WhiskyWine 설치에 실패했습니다. 진단 정보를 복사하고 로그를 첨부하세요."
+          }
+        },
+        "nl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Installatie van WhiskyWine is mislukt. Kopieer de diagnostiek en voeg logbestanden toe."
+          }
+        },
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Instalacja WhiskyWine nie powiodła się. Skopiuj diagnostykę i dołącz logi."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "A instalação do WhiskyWine falhou. Copie os diagnósticos e anexe os logs."
+          }
+        },
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "A instalação do WhiskyWine falhou. Copie os diagnósticos e anexe os registos."
+          }
+        },
+        "ro" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "WhiskyWine installation failed. Please copy diagnostics and attach logs."
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Установка WhiskyWine не удалась. Скопируйте диагностику и приложите журналы."
+          }
+        },
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Installationen av WhiskyWine misslyckades. Kopiera diagnostik och bifoga loggar."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WhiskyWine kurulumu başarısız oldu. Lütfen tanılamayı kopyalayıp günlükleri ekleyin."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Не вдалося встановити WhiskyWine. Скопіюйте діагностику та додайте журнали."
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cài đặt WhiskyWine thất bại. Vui lòng sao chép chẩn đoán và đính kèm nhật ký."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WhiskyWine 安装失败。请复制诊断并附上日志。"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WhiskyWine 安裝失敗。請複製診斷並附上記錄。"
+          }
+        }
+      }
+    },
     "setup.whiskywine.error.accessDenied" : {
       "localizations" : {
         "en" : {
